src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c1_c2_c3.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x, {
    One:   (a : int) => unit,
    One:   (b : int) => unit,
    Two:   (c : nat) => unit,
    Three: () => unit
  })